...
            android:id="@+id/buttonDeleteItem"
            android:layout_width="84dp"
            android:layout_height="40dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingHorizontal="8dp"
            android:text="@string/delete"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
...
